--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>
+
+    </title>
+    <style type="text/css">
+        
+    </style>
 </head>
 <body>
 
