--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <style type="text/css">
         p .tooltip{
-            color: aquamarine;
+            color: #39c5bb;
             position:relative;
         }
         p .tooltip::before{
