--- a/box.html
+++ b/box.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style type="text/css">
-        p{
+        p,ul{
+            border: 2px solid rebeccapurple;
+        }
+        span,li{
+            border: 2px solid blue;
+        }
+        ul{
+            display:inline-flex;
+            list-style: none;
+            padding: 0;
+        }
 
-        }
-        .box1{
-
-        }
-        span{
-            color: #39c5bb;
-            display: inline-block;
-            width: 200px;
-        }
 
     </style>
 </head>
-<body>
-<dir class="box1">
-    <p>这是一个段落</p>
-    <p>这是一个段落这是一个段落这是一个段落</p>
-</dir>
+<!--<body>-->
+<!--<dir class="box1">-->
+<!--    <p>这是一个段落</p>-->
+<!--    <p>这是一个段落这是一个段落这是一个段落</p>-->
+<!--</dir>-->
 <ul>
-    
+    <li>Item One</li>
+    <li>Item Two</li>
+    <li>Item Three</li>
 </ul>
 </body>
 </html>
