--- a/box.html
+++ b/box.html
@@ -7,6 +7,10 @@
         p,ul{
             border: 2px solid rebeccapurple;
         }
+        .element{
+            display:flex;
+
+        }
         span,li{
             border: 2px solid blue;
         }
@@ -14,6 +18,9 @@
             display:inline-flex;
             list-style: none;
             padding: 0;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
         }
 
 
