--- a/meun1.html
+++ b/meun1.html
@@ -8,13 +8,21 @@
             width: 1000px;
             height: 40px;
             background-color: #4682b4;
-            margin: auto;
+            margin: 50px auto;
+
         }
         .meun a{
+            width: 100px;
+            height: 50px;
             color: #fff;
             text-decoration: none;
             padding: 9px 20px;
             line-height: 40px;
+            background-color: transparent;
+            display: inline-block;
+        }
+        .meun a：hover{
+            background-color: white;
         }
     </style>
 </head>
@@ -22,8 +30,8 @@
     <div class="meun">
         <a href="#">首页</a>
         <a href="#">周边游</a>
-        <a href="#">链接</a>
-        <a href="#">其他</a>
+        <a href="#">出境游</a>
+        <a href="#">独家栏目</a>
     </div>
 </body>
 </html>
