--- a/meun1.html
+++ b/meun1.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style type="text/css">
-        .meun{
-            width: 1000px;
+        .menu{
+            width: calc(100%);
             height: 40px;
             background-color: #4682b4;
             margin: 50px auto;
-
+            display: flex;
         }
-        .meun a{
+        .menu a{
+            margin: auto;
             width: 100px;
             height: 50px;
             color: #fff;
             text-decoration: none;
-            padding: 9px 20px;
+            /*padding: 9px 20px;*/
             line-height: 40px;
             background-color: transparent;
             display: inline-block;
         }
-        .meun a：hover{
+        .menu a：hover{
             background-color: white;
         }
     </style>
 </head>
 <body>
-    <div class="meun">
+    <div class="menu">
         <a href="#">首页</a>
         <a href="#">周边游</a>
         <a href="#">出境游</a>
