--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div id="container">
-        <h3 class="content">绊爱是YouTube上一个<span>虚拟YouTuber</span>, 自称为<span>世界第一个Virtual YouTuber</span>，YouTube频道名为A.I.Channel</h3>
+        <h3 class="content">初音是v家第一个虚拟偶像<span>其实是第三个</span>, 自称为<span>世界第一公主殿下</span></h3>
     </div>
 </body>
 </html>
