--- a/meun1.html
+++ b/meun1.html
@@ -17,15 +17,55 @@
             height: 50px;
             color: #fff;
             text-decoration: none;
+            transition: all 0.2s;
             /*padding: 9px 20px;*/
             line-height: 40px;
             background-color: transparent;
-            display: inline-block;
+            display: flex;
+            flex-flow: nowrap;
+
         }
         .menu a：hover{
-            background-color: white;
+            background-color: lightpink;
         }
+        span{
+                    width: 100%; display: block;
+                  overflow: hidden;
+                    text-overflow:ellipsis;
+                    white-space: nowrap;
+                }
     </style>
+
+<!--    -->
+<!--    <style type="text/css">-->
+<!--        .menu{-->
+<!--            width: 1000px;-->
+<!--            margin: auto;-->
+<!--            height: 30px;-->
+<!--            background-color: #008000;-->
+<!--        }-->
+<!--        .menu a{-->
+<!--            display: inline-block;-->
+<!--            width: 120px;-->
+<!--            height: 30px;-->
+<!--            margin-left: 20px;-->
+<!--            overflow: hidden;-->
+<!--            word-break: keep-all;-->
+<!--            text-overflow:ellipsis;-->
+<!--            text-align: center;-->
+<!--            line-height: 30px;-->
+<!--            text-decoration: none;-->
+<!--        }-->
+<!--        .menu a:hover{-->
+<!--            background-color: red;-->
+<!--        }-->
+<!--        span{-->
+<!--            width: 100%; display: block;-->
+<!--            overflow: hidden;-->
+<!--            text-overflow:ellipsis;-->
+<!--            white-space: nowrap;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
     <div class="menu">
@@ -33,6 +73,7 @@
         <a href="#">周边游</a>
         <a href="#">出境游</a>
         <a href="#">独家栏目</a>
+        <a href="#"><span>ajgfqwekogkwsregporejobrbr</span></a>
     </div>
 </body>
 </html>
