--- a/boxx.html
+++ b/boxx.html
@@ -7,8 +7,8 @@
 			/* emmet */
 			.f{
 				margin:200px 500px;
-				width: 500px;
-				/* height: 300px; */
+				width: 50px;
+				 height: 300px;
 				border: 1px solid #000;
 			}
 			.f .s{
@@ -18,22 +18,21 @@
 			}
 			.f .s1{
 				background: red;
-				/* float: left; */
+
 				float: right;
 			}
 			.f .s2{
 				width: 70px;
 				height: 70px;
 				background: green;
-				/* float: left; */
-				/* float: right; */
+				 /*float: left;*/
+				 float: right;
 			}
 			.f .s3{
 				width: 90px;
 				height: 90px;
 				background: blue;
-				/* float: left; */
-				float: left;
+				 float: left;
 			}
 			/* 
 			 浮动
